--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@babel/preset-react": "^7.16.7",
     "babel-loader": "^8.2.3",
     "eslint-loader": "^4.0.2",
+    "podcast-api": "^1.1.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.2.1",
@@ -23,6 +24,8 @@
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.5.4",
+    "css-loader": "^6.6.0",
+    "dotenv": "^16.0.0",
     "eslint": "^8.9.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-plugin-import": "^2.25.4",
@@ -31,6 +34,7 @@
     "eslint-plugin-react-hooks": "^4.3.0",
     "eslint-webpack-plugin": "^3.1.1",
     "prettier": "^2.5.1",
+    "style-loader": "^3.3.1",
     "webpack-dev-server": "^4.7.4"
   }
 }
