--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@babel/preset-react": "^7.16.7",
     "babel-loader": "^8.2.3",
     "eslint-loader": "^4.0.2",
+    "firebase": "^9.6.7",
     "podcast-api": "^1.1.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
