--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "@babel/core": "^7.17.4",
     "@babel/preset-env": "^7.16.11",
     "@babel/preset-react": "^7.16.7",
+    "@emotion/react": "^11.8.1",
+    "@emotion/styled": "^11.8.1",
+    "@mui/material": "^5.4.4",
     "babel-loader": "^8.2.3",
     "eslint-loader": "^4.0.2",
-    "firebase": "^9.6.7",
     "podcast-api": "^1.1.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
