--- a/package.json
+++ b/package.json
@@ -15,11 +15,14 @@
     "@babel/preset-react": "^7.16.7",
     "@emotion/react": "^11.8.1",
     "@emotion/styled": "^11.8.1",
+    "@mui/icons-material": "^5.5.0",
     "@mui/material": "^5.4.4",
+    "axios": "^0.26.0",
     "babel-loader": "^8.2.3",
     "eslint-loader": "^4.0.2",
     "podcast-api": "^1.1.1",
     "react": "^17.0.2",
+    "react-audio-player": "^0.17.0",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.2.1",
     "webpack": "^5.69.0",
